--- a/arch/arm64/configs/biofrost_defconfig
+++ b/arch/arm64/configs/biofrost_defconfig
@@ -1545,6 +1545,13 @@ CONFIG_QPNP_MISC=y
 # VOP Driver
 #
 # CONFIG_GENWQE is not set
+CONFIG_KPROFILES=y
+CONFIG_KP_DEFAULT_MODE=2
+CONFIG_AUTO_KPROFILES=y
+CONFIG_AUTO_KPROFILES_MSM_DRM=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
+# CONFIG_KP_VERBOSE_DEBUG is not set
 # CONFIG_ECHO is not set
 # CONFIG_CXL_BASE is not set
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
@@ -4288,7 +4295,6 @@ CONFIG_ION=y
 # CONFIG_ION_CARVEOUT_HEAP is not set
 # CONFIG_ION_CHUNK_HEAP is not set
 # CONFIG_ION_CMA_HEAP is not set
-# CONFIG_ION_FORCE_DMA_SYNC is not set
 # CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_DGNC is not set
