biofrost_defconfig: Configure Kprofiles
Signed-off-by: mcdofrenchfreis <xyzevan@androidist.net>

--- a/arch/arm64/configs/biofrost_defconfig
+++ b/arch/arm64/configs/biofrost_defconfig
@@ -634,7 +634,6 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_PERCPU_STATS is not set
 CONFIG_VMSTAT_INTERVAL=60
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
-# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
@@ -1550,6 +1549,13 @@ CONFIG_FORCE_FAST_CHARGE=y
 # VOP Driver
 #
 # CONFIG_GENWQE is not set
+CONFIG_KPROFILES=y
+CONFIG_KP_DEFAULT_MODE=2
+CONFIG_AUTO_KPROFILES=y
+CONFIG_AUTO_KPROFILES_MSM_DRM=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
+# CONFIG_KP_VERBOSE_DEBUG is not set
 # CONFIG_ECHO is not set
 # CONFIG_CXL_BASE is not set
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
@@ -4293,7 +4299,6 @@ CONFIG_ION=y
 # CONFIG_ION_CARVEOUT_HEAP is not set
 # CONFIG_ION_CHUNK_HEAP is not set
 # CONFIG_ION_CMA_HEAP is not set
-# CONFIG_ION_FORCE_DMA_SYNC is not set
 # CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_DGNC is not set
