--- a/arch/arm64/configs/biofrost_defconfig
+++ b/arch/arm64/configs/biofrost_defconfig
@@ -105,7 +105,8 @@ CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_PSI is not set
+CONFIG_PSI=y
+# CONFIG_PSI_DEFAULT_DISABLED is not set
 
 #
 # RCU Subsystem
@@ -146,13 +147,9 @@ CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_UCLAMP_ASSIST=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
-CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
+# CONFIG_MEMCG is not set
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
-CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -235,7 +232,6 @@ CONFIG_PERF_EVENTS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_SLAB_STAT_DEBUG=y
-# CONFIG_SLUB_MEMCG_SYSFS_ON is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -632,7 +628,6 @@ CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_PROCESS_RECLAIM_ENHANCE=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
@@ -4292,8 +4287,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_SYSTEM_HEAP is not set
 # CONFIG_ION_CARVEOUT_HEAP is not set
